simpler set up and execution

--- a/src/deprecated scripts/old_config.ini
+++ b/src/deprecated scripts/old_config.ini
@@ -1,5 +1,12 @@
 [account]
 main_char_nickname = YOUR CHARACTER NAME
+main_char_id = 0 ;deprecated, don't use
+char_count = 0 ;deprecated, don't use
+; save your acc_name and pass at your own risk
+; if an external user manages to read this file you could be hacked
+; these are used for auto logging in
+acc_name = <confidential> ;deprecated, don't use
+pass = <confidential> ;deprecated, don't use
 
 [tibia_hotkeys]
 ;hotkeys usd for each action
